Bug 337226 - openvpn openfile dialogs broken
Summary: openvpn openfile dialogs broken
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.0.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-08 09:51 UTC by Harald Sitter
Modified: 2014-07-08 15:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2014-07-08 09:51:09 UTC
when creating an openvpn connection one has to define a set of files for certificates etc. the filechooser for those files is entirely defunct, upon selecting a file absolutely nothing happens.

Reproducible: Always
Comment 1 Lamarque V. Souza 2014-07-08 12:11:09 UTC
Please send me a screenshot of the file chooser dialog you use (there are more than one in Linux) and a screenshot of the connection editor dialog right after you select the certificate file.
Comment 2 Jan Grulich 2014-07-08 12:23:02 UTC
@Lamarque: not necessary, Harald is using Plasma 5 version and I've found that the problem is probably in KUrlRequester.
Comment 3 Harald Sitter 2014-07-08 12:38:56 UTC
moving to kio, kurlqurester is trying to connect a signal with incorrect signature making the connection non-functional
Comment 4 Harald Sitter 2014-07-08 15:47:56 UTC
Git commit bffdd7fa0c03f255bded5071e39f50c768891eca by Harald Sitter.
Committed on 08/07/2014 at 15:45.
Pushed by sitter into branch 'master'.

fix kurlrequester dialog accept handling

switch to qdialog::accepted signal, rename slot (on private class) and
remove accepted check in slot
REVIEW: 119174

M  +7    -9    src/widgets/kurlrequester.cpp
M  +1    -1    src/widgets/kurlrequester.h

http://commits.kde.org/kio/bffdd7fa0c03f255bded5071e39f50c768891eca