fix kurlrequester dialog accept handling

switch to qdialog::accepted signal, rename slot (on private class) and
remove accepted check in slot

BUG: 337226
REVIEW: 119174